get btc data and error handling and refactor struct
