# internal/controllers/bitcoin-controller.go
@@ -5,8 +5,11 @@ import (
 	"io"
 	"log"
 	"net/http"
+	"strconv"
 
 	"github.com/0xbase-Corp/portfolio_svc/internal/models"
+	"github.com/0xbase-Corp/portfolio_svc/internal/types"
+	"github.com/0xbase-Corp/portfolio_svc/shared/errors"
 	"github.com/gin-gonic/gin"
 	"gorm.io/gorm"
 )
@@ -21,37 +24,38 @@ import (
 // @Accept       json
 // @Produce      json
 // @Param        btc-address  path      string  true  "Bitcoin Address"
-// @Success      200          {object}  struct{ Data models.BitcoinAddressInfo "data"; ErrorCode int "error_code"; ErrNo int "err_no"; Message string "message"; Status string "status" }  "Returns wallet information including transaction history and balance"
-// @Failure      400          {object}  struct{ Error string }  "Bad Request"
-// @Failure      500          {object}  struct{ Error string }  "Internal Server Error"
+// @Success      200 {object} types.OKResponse
+// @Failure      400 {object} errors.APIError
+// @Failure      404 {object} errors.APIError
+// @Failure      500 {object} errors.APIError
 // @Router       /portfolio/btc/:btc-address [get]
-
-// BitcoinController handles requests for Bitcoin wallet information.
 func BitcoinController(c *gin.Context, db *gorm.DB) {
-	log.Println("BitcoinController invoked")
-	// Extract the Bitcoin address from the request parameter.
 	btcAddress := c.Param("btc-address")
-	log.Println("for address:", btcAddress)
+
+	if btcAddress == "" {
+		errors.HandleHttpError(c, errors.NewBadRequestError("empty btc btc address"))
+		return
+	}
 
 	// Prepare the BTC API request URL.
 	url := "https://chain.api.btc.com/v3/address/" + btcAddress
 	req, err := http.NewRequest("GET", url, nil)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		errors.HandleHttpError(c, errors.NewBadRequestError(err.Error()))
 		return
 	}
 	// Create an HTTP client and execute the request.
 	client := &http.Client{}
 	resp, err := client.Do(req)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		errors.HandleHttpError(c, errors.NewBadRequestError(err.Error()))
 		return
 	}
 	defer resp.Body.Close()
 	// Read the response body.
 	body, err := io.ReadAll(resp.Body)
 	if err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		errors.HandleHttpError(c, errors.NewBadRequestError(err.Error()))
 		return
 	}
 
@@ -68,8 +72,7 @@ func BitcoinController(c *gin.Context, db *gorm.DB) {
 
 	// Parse the JSON response into the defined struct.
 	if err := json.Unmarshal(body, &apiResponse); err != nil {
-		log.Println("Failed to parse JSON response: " + err.Error())
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to parse JSON response: " + err.Error()})
+		errors.HandleHttpError(c, errors.NewBadRequestError("Failed to parse JSON response: "+err.Error()))
 		return
 	}
 	log.Println("Received response from BTC API")
@@ -84,11 +87,11 @@ func BitcoinController(c *gin.Context, db *gorm.DB) {
 				BlockchainType: "Bitcoin",
 			}
 			if err := db.Create(&wallet).Error; err != nil {
-				c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to create wallet: " + err.Error()})
+				errors.HandleHttpError(c, errors.NewInternalServerError("Failed to create wallet: "+err.Error()))
 				return
 			}
 		} else {
-			c.JSON(http.StatusInternalServerError, gin.H{"error": "Database query error: " + err.Error()})
+			errors.HandleHttpError(c, errors.NewInternalServerError("Database query error: "+err.Error()))
 			return
 		}
 	}
@@ -105,7 +108,7 @@ func BitcoinController(c *gin.Context, db *gorm.DB) {
 	// Save btcComV1 to the database to get a valid BtcAssetID
 	if err := tx.Create(&btcComV1).Error; err != nil {
 		tx.Rollback()
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to save btcComV1 record: " + err.Error()})
+		errors.HandleHttpError(c, errors.NewInternalServerError("Failed to save btcComV1 record: "+err.Error()))
 		return
 	}
 
@@ -115,16 +118,74 @@ func BitcoinController(c *gin.Context, db *gorm.DB) {
 	// Proceed to call SaveBitcoinData with the updated BitcoinAddressInfo and btcComV1
 	if err := models.SaveBitcoinData(tx, &apiResponse.Data.Data, &btcComV1); err != nil {
 		tx.Rollback()
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to save Bitcoin address info: " + err.Error()})
+		errors.HandleHttpError(c, errors.NewInternalServerError("Failed to save Bitcoin address info: "+err.Error()))
 		return
 	}
 
 	// Commit the transaction
 	if err := tx.Commit().Error; err != nil {
-		c.JSON(http.StatusInternalServerError, gin.H{"error": "Failed to commit transaction: " + err.Error()})
+		errors.HandleHttpError(c, errors.NewInternalServerError("Failed to commit transaction: "+err.Error()))
 		return
 	}
 
-	log.Println("Data saved successfully for address:", btcAddress)
-	c.JSON(http.StatusOK, gin.H{"message": "Data saved successfully"})
+	c.JSON(http.StatusOK, types.OKResponse{
+		Message: "Data saved successfully",
+	})
+}
+
+//	@BasePath	/api/v1
+//
+// GetBtcDataController godoc
+// @Summary      Get BTC portfolio for a wallet
+// @Description  Retrieve BTC portfolio details, including BitcoinAddressInfo, for a specific wallet.
+// @Tags         bitcoin
+// @Accept       json
+// @Produce      json
+// @Param        wallet_id path int true "Wallet ID" Format(int)
+// @Param        offset query int false "Pagination offset" Format(int)
+// @Param        limit query int false "Pagination limit" Format(int)
+// @Success      200 {object} models.GlobalWallet
+// @Failure      400 {object} errors.APIError
+// @Failure      404 {object} errors.APIError
+// @Failure      500 {object} errors.APIError
+// @Router       /portfolio/btc-wallet/{wallet_id} [get]
+func GetBtcDataController(c *gin.Context, db *gorm.DB) {
+	wallet := models.GlobalWallet{}
+	walletID, err := strconv.Atoi(c.Param("wallet-id"))
+
+	if err != nil {
+		errors.HandleHttpError(c, errors.NewBadRequestError("invalid wallet id"))
+		return
+	}
+
+	// Parse optional query parameters
+	page, err := strconv.Atoi(c.DefaultQuery("offset", "1"))
+	if err != nil {
+		errors.HandleHttpError(c, errors.NewBadRequestError("invalid offset"))
+		return
+	}
+
+	limit, err := strconv.Atoi(c.DefaultQuery("limit", "10"))
+	if err != nil {
+		errors.HandleHttpError(c, errors.NewBadRequestError("invalid limit"))
+		return
+	}
+
+	// Define a reusable function to apply offset and limit for preload on BitcoinAddressInfo
+	prlimit := func(query *gorm.DB) *gorm.DB {
+		return query.Offset((page - 1) * limit).Limit(limit)
+	}
+
+	err = db.
+		Preload("BitcoinBtcComV1.BitcoinAddressInfo", prlimit).
+		Preload("BitcoinBtcComV1").
+		Where("wallet_id = ?", walletID).
+		First(&wallet).Error
+
+	if err != nil {
+		errors.HandleHttpError(c, errors.NewNotFoundError("wallet not found"))
+		return
+	}
+
+	c.JSON(http.StatusOK, wallet)
 }
